2011-11-28 Pierre Wieser <pwieser@trychlos.org>

	* nact/nact-export-format.c (draw_in_vbox): Use gtk_misc functions.

	* run-autogen.sh:
	* run-distcheck.sh: Review in order to be able to build several guests
	from a common single source tree.

	* src/nact/nact-assistant-export.c (assist_initial_load_target_folder):
	Get ride of the superfluous 'name' entry field when selecting the folder.

	* src/nact/nact-export-ask.c (nact_export_ask_user):
	Actually do not export the item if the user cancels the operation.

	* src/io-desktop/nadp-desktop-file.c (nadp_desktop_file_new_from_uri):
	Only display debug messages (try to minimize warnings on import).

	* src/io-xml/naxml-reader.c
	(publish_undealt_nodes): Removed useless (and buggy) function.
	(manage_import_mode): Returns all messages to the caller.

	* src/io-desktop/nadp-reader.c (nadp_reader_iimporter_import_from_uri):
	Returns all messages to the caller.

2011-11-27 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/base-gtk-utils.c (base_gtk_utils_restore_window_position):
	Limit the window size, maximizing with the screen size.

	* nact/nact-tree-view.h:
	* nact/nact-tree-view.c: Define parent property.

	* nact/nact-tree-view.c (on_tree_view_realized):
	Delay all signal connection until the widget be actually realized.

	* src/nact/nact-sort-buttons.c (on_base_initialize_buttons):
	Delay the connection to the NactTreeView signal until we are sure the
	widget is realized.

	* src/nact/nact-main-window.c (on_base_initialize_gtk_toplevel):
	Delay the initialization of the NactTreeView until the Gtk toplevel has
	been loaded from XML Glade file.

	* src/nact/nact-assistant-export.c: Adapt to gtk3.

	* src/nact/nact-export-format.c (nact_export_format_init_display):
	Remove the useless intermediate GtkGrid.

	* src/nact/nact-assistant-export.ui: Let the format selection be scrolled.

	* src/core/na-gtk-utils.c (dump_children):
	Also dump the address of the child widget.